# AgentIA

./: .env.example  .gitignore  Readme.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: main.py
backend/app/agent/: graph.py  tools.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agent.py  evaluate.py  moves.py  vector_search.py  videos.py
backend/app/core/: config.py
backend/app/models/: chess_models.py
backend/app/services/: lichess_service.py  milvus_service.py  mongodb_service.py  stockfish_service.py  youtube_service.py
backend/app/utils/: fen_validator.py
backend/scripts/: load_wikichess_data.py
backend/tests/: conftest.py  test_endpoint_evaluate.py  test_endpoint_moves.py  test_fen_validator.py  test_healthcheck.py  test_lichess_service.py  test_models.py  test_stockfish_service.py
docs/: etude_faisabilite_systeme_video_mcp.md
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.html  app.scss  app.ts
frontend/src/app/components/chessboard/: chessboard.component.html  chessboard.component.scss  chessboard.component.ts
frontend/src/app/components/recommendations/: recommendations.component.html  recommendations.component.scss  recommendations.component.ts
frontend/src/app/components/video-panel/: video-panel.component.html  video-panel.component.scss  video-panel.component.ts
frontend/src/app/services/: chess-api.service.ts
